[gd_scene load_steps=3 format=3 uid="uid://cnrg8fdovmn2s"]

[ext_resource type="Script" path="res://systems/test_room.gd" id="1_8c6dp"]
[ext_resource type="Texture2D" uid="uid://rfrp23e3fyfe" path="res://systems/blep.png" id="2_3d5yf"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_8c6dp")

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 164.0
offset_top = 93.0
offset_right = 750.0
offset_bottom = 177.0
placeholder_text = "Type Here"

[node name="Button" type="Button" parent="."]
offset_left = 418.0
offset_top = 190.0
offset_right = 498.0
offset_bottom = 221.0
text = "CLICK ME"

[node name="leave_button" type="Button" parent="."]
offset_left = 86.0
offset_top = 510.0
offset_right = 142.0
offset_bottom = 541.0
text = "LEAVE"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(907, 448)
texture = ExtResource("2_3d5yf")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="leave_button" to="." method="_on_leave_button_pressed"]
